...
    android:id="@+id/storageLayout"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".StorageUnitActivity"
    tools:showIn="@layout/activity_storage_unit">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/itemView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="76dp"
...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </android.support.v7.widget.RecyclerView>

    <ImageButton
        android:id="@+id/itemCreate"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
...
